# enterprise-lakehouse-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile  docker-compose.yml
quality/: expectation.py
sql/queries/: gold_analytics.sql
tests/unit/: test_unit_transform.py
transform/bronze/: raw_to_bronze.py
transform/gold/: silver_to_gold.py
transform/silver/: bronze_to_silver.py
utils/: delta_utils.py  schema_registry.py  spark_session.py
