[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "enterprise-lakehouse-pipeline"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.1.0", # ACID transaction on Data Lake
    "great-expectations==0.18.14", # Data quality check 
    "boto3>=1.34", # AWS SDK (S3 access)
    "python-dotenv>=1.0", # Read .env files
] # libraries

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "faker>=25.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"] # Rules activeted 
# E : errors
# F : Unused imports, undefined variables
# I : imports not sorted correctly
# UP : Old Python syntax
# B : Bugs
# SIM : Code simplified

[tool.mypy]
python_version = "3.11"
strict = true #
ignore_missing_imports = true #

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short" # Standardflag when running pytest